# python-tools

./: .gitignore  README.md  run.sh
sh_tools/: dup.sh  vao-do-rsync.sh
sh_tools/yt-dl/: README.md  dl.sh
sh_tools/yt-dl/confs/: audio.conf  video.conf
tools/backup-dir/: README.md  main.py  pyproject.toml
tools/enhance-audio/: app-edited.py
