[project]
name = "git-aware-backup"
version = "0.1.0"
description = "A tool to create compressed backups of directories while respecting .git directories and .gitignore patterns"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pathspec>=0.12.1",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"] 